# openchatbi

./: .dockerignore  .gitignore  CONTRIBUTING.md  Dockerfile.python-executor  LICENSE  README.md  generated.json  generated.json.progress.json  generated1.json  generated1.json.progress.json  pyproject.toml  run_cli.py  run_streamlit_ui.py  run_tests.py
.github/workflows/: docs.yml  publish.yml  runledger.yml
baselines/: runledger-openchatbi.json
docs/research/: data-agent-harness-comparison-2026-06-08.html  data-agent-harness-comparison-2026-06-08.md
docs/source/: catalog.rst  code.rst  conf.py  config.rst  core.rst  data_analysis_agent.rst  index.rst  llm.rst  text2sql.rst  timeseries.rst  tools.rst
docs/source/_templates/: layout.html
docs/superpowers/plans/: 2026-06-08-data-agent-harness-comparison.md  2026-06-09-openchatbi-harness-improvement.md
docs/superpowers/specs/: 2026-06-08-data-agent-harness-comparison-design.md  2026-06-09-openchatbi-harness-improvement-design.md
evals/: __init__.py
evals/judge/: README.md  __init__.py  collect_generated.py  llm_judge.py  run_judge.py
evals/judge/cases/: c02_aggregation.yaml  c03_aggregation.yaml  c04_aggregation.yaml  c05_aggregation.yaml  c06_join.yaml  c07_join.yaml  c08_timerange.yaml  c09_timerange.yaml  c10_anomaly.yaml  c11_visualization.yaml  c12_text2sql.yaml  c13_text2sql.yaml  c14_text2sql.yaml  c15_text2sql.yaml  c16_aggregation.yaml  c17_visualization.yaml  c18_aggregation.yaml  c19_report.yaml  c20_report.yaml  c21_schema_discovery.yaml
evals/judge/example_cases/: ex01_simple_select.yaml  ex02_filter.yaml  ex03_aggregation.yaml  ex04_group_by.yaml  ex05_join.yaml  ex06_multi_join.yaml  ex07_subquery.yaml  ex08_order_limit.yaml  ex09_distinct.yaml  ex10_having.yaml  ex11_timerange.yaml  ex12_timerange_month_compare.yaml  ex13_anti_join.yaml  ex14_anomaly.yaml  ex15_visualization.yaml  ex16_visualization_forecast.yaml  ex17_report.yaml  ex18_report_with_knowledge.yaml  ex19_knowledge_lookup.yaml  ex20_show_schema.yaml  ex21_schema_discovery.yaml  ex22_count_distinct.yaml  ex23_category_normalization.yaml  ex24_ratio_metric.yaml  ex25_avg_items_per_order.yaml  ex26_daily_orders_last_30_days.yaml  (+6 more)
evals/runledger/: README.md  __init__.py  suite.yaml  tools.py
example/: bi.yaml  common_columns.csv  config.yaml  sql_example.yaml  table_columns.csv  table_info.yaml  table_selection_example.csv  tracking_orders.sqlite
judge_out/: report.json
openchatbi/: __init__.py  agent_graph.py  config.yaml.template  config1.yaml  config_loader.py  constants.py  context_config.py  context_manager.py  db.sql  graph.py  graph_state.py  memory_config.py  memory_scoring.py  streaming.py  text_segmenter.py  utils.py
openchatbi/analysis/: README.md  adtributor.py  adtributor_demo.py  agent.py  anomaly_detection.py  models.py
openchatbi/catalog/: __init__.py  catalog_loader.py  catalog_store.py  entry.py  factory.py  helper.py  retrival_helper.py  schema_retrival.py  token_service.py
openchatbi/code/: docker_executor.py  executor_base.py  local_executor.py  restricted_local_executor.py
openchatbi/llm/: llm.py
openchatbi/observability/: __init__.py  audit.py  callbacks.py  context.py  logging_setup.py  metrics.py  pricing.py  tracing.py
openchatbi/prompts/: agent_prompt.md  data_analysis_prompt.md  extraction_prompt.md  schema_linking_prompt.md  sql_confidence_prompt.md  summary_prompt.md  system_prompt.py  text2sql_prompt.md  visualization_prompt.md
openchatbi/text2sql/: __init__.py  confidence.py  data.py  errors.py  extraction.py  generate_sql.py  schema_linking.py  sql_graph.py  text2sql_utils.py  visualization.py
openchatbi/tool/: adtributor_tool.py  anomaly_detection.py  ask_human.py  mcp_tools.py  memory.py  run_python_code.py  save_report.py  search_knowledge.py  timeseries_forecast.py
sample_api/: async_api.py
sample_ui/: async_graph_manager.py  history_loader.py  memory_ui.py  plotly_utils.py  simple_ui.py  streaming_ui.py  streamlit_ui.py  style.py
tests/: README.md  __init__.py  conftest.py  test_catalog_loader.py  test_catalog_store.py  test_confidence.py  test_config_loader.py  test_golden_sql_capture.py  test_graph_state.py  test_history_loader.py  test_incomplete_tool_calls.py  test_langgraph_dependency_resolution.py  test_langgraph_graph_runtime.py  test_langgraph_persistence_contract.py  test_langgraph_streaming_contract.py  test_learned_sql_store.py  test_memory.py  test_memory_config.py  test_memory_decay_rerank.py  test_memory_scoring.py  test_pattern_memory_capture.py  test_plotly_utils.py  test_simple_store.py  test_streaming.py  test_text2sql_confidence_gate.py  test_text2sql_errors.py  test_text2sql_extraction.py  test_text2sql_generate_sql.py  test_text2sql_schema_linking.py  test_text2sql_visualization.py  test_timeseries_forecast.py  test_tools_ask_human.py  test_tools_run_python_code.py  test_tools_search_knowledge.py  test_utils.py
tests/analysis/: test_adtributor.py  test_agent_graph_integration.py  test_anomaly_detection.py  test_data_analysis_agent.py
tests/context_management/: README.md  __init__.py  conftest.py  test_agent_graph_integration.py  test_context_config.py  test_context_manager.py  test_edge_cases.py  test_performance_edge_cases.py  test_runner.py  test_state_operations.py
tests/eval/: test_collect_generated.py  test_llm_judge.py  test_runledger_agent.py
tests/observability/: test_audit.py  test_callbacks.py  test_config_observability.py  test_context.py  test_execute_sql_audit.py  test_llm_usage_capture.py  test_logging_setup.py  test_metrics.py  test_pricing.py  test_streaming_usage.py  test_streaming_usage_render.py  test_tracing.py  test_tracing_contextvar_propagation.py
timeseries_forecasting/: Dockerfile  README.md  app.py  build_and_run.sh  model_handler.py  test_forecasting.py
(+59 files in other folders)
